app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    spec:
      hostAliases:
        - ip: '192.168.65.2'
          hostnames:
            - 'wirepact-api.localhost'
            - 'wirepact-app.localhost'
            - 'keycloak.localhost'
      containers:
        - name: app
          args:
            - -port=8080
            - -redirect=http://wirepact-app.localhost
            - -api=http://api-svc.k8s-mesh-demo:8080/albums
          image: app
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
